tests/bad/if_not_bool.ae
/// fail: Condition must be boolean

def main() {
    if (0) {
    }
}